overlays/poland/replica_count.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: taco-cloud
  name: taco-cloud

spec:
  replicas: 3
