overlays/poland/delete_route.yaml
$patch: delete
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: taco-cloud
  name: taco-cloud
  namespace: taco-cloud
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: poland-taco-cloud
    weight: 100
  wildcardPolicy: None
